Remove footer top margin

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -353,7 +353,7 @@ footer {
     color: var(--white);
     padding: 2rem 0;
     text-align: center;
-    margin-top: 3rem;
+    margin-top: 0;
 }
 
 /* Responsive Design */
